--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
   <body>
     <header>
       <h1>
-        <a href="#home">benmcgarvey.com</a>
+        <a class="underlined" href="#">ben mcgarvey</a>
       </h1>
       <nav>
-        <a href="#contact">Contact</a>
+        <a class="underlined" href="#contact">Contact</a>
       </nav>
     </header>
 
