--- a/index.html
+++ b/index.html
@@ -36,26 +36,32 @@
       <h1>
         <a class="underlined" href="#">ben mcgarvey</a>
       </h1>
-      <nav>
-        <a class="underlined" href="#contact">Contact</a>
-      </nav>
     </header>
 
     <main>
-      <section id="home">
+      <section>
         <p>Hello 👋</p>
         <p>I am a <em>Software Engineer</em></p>
-        <p>Working for <em>Thoughtworks</em></p>
+        <p>
+          Working for
+          <a href="https://www.thoughtworks.com/"><em>Thoughtworks</em></a>
+        </p>
         <p>Living in <em>Melbourne, Australia</em></p>
       </section>
-
-      <section id="contact">
+      <br />
+      <section>
         <ul>
           <li>
-            <a href="https://github.com/benmcgarvey">Github</a>
+            Email:
+            <a href="mailto:b.mcgarvey.bm@gmail.com"
+              ><em>b.mcgarvey.bm@gmail.com</em></a
+            >
           </li>
           <li>
-            <a href="mailto:b.mcgarvey.bm@gmail.com">Email</a>
+            Github:
+            <a href="https://github.com/benmcgarvey"
+              ><em>github.com/benmcgarvey</em></a
+            >
           </li>
         </ul>
       </section>
