--- a/content/mailbox/index.html
+++ b/content/mailbox/index.html
@@ -1,15 +1,8 @@
----
-layout: layouts/base.njk
----
 <section>
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/combine/npm/purecss@3.0.0/build/tables-min.css,npm/purecss@3.0.0/build/buttons-min.css"/>
-  <div
-    x-cloak
-    x-data="{mailbox: [], 'isLoading': true}"
-    x-init="fetch('/api/mailbox')
-      .then(response => response.json())
-      .then(response => { mailbox = response.data; isLoading = false; })"
-  >
+  <link rel="stylesheet"
+    href="//cdn.jsdelivr.net/combine/npm/purecss@3.0.0/build/tables-min.css,npm/purecss@3.0.0/build/buttons-min.css" />
+  <div x-cloak x-data="{mailbox: [], 'isLoading': true}"
+    x-init="fetch('/api/mailbox').then(response => response.json()).then(response => { mailbox = response.data; isLoading = false; })">
     <div x-show="isLoading">Loading...</div>
     <table x-show="!isLoading" class="pure-table" style="width: 90%; max-width: 90%;">
       <thead>
@@ -27,9 +20,8 @@ layout: layouts/base.njk
             <td x-text="mail.contact"></td>
             <td x-text="mail.message"></td>
             <td>
-              <button @click="fetch(`/api/mailbox/${mail.id}`, { method: 'DELETE' }).then((response) => {
-                  response.ok && $event.target.parentElement.parentElement.remove();
-                })" >
+              <button
+                @click="fetch(`/api/mailbox/${mail.id}`, { method: 'DELETE' }).then((response) => response.ok && $event.target.parentElement.parentElement.remove())">
                 Delete
               </button>
             </td>
